# SuperNoteOrganiser

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: code-quality-agent.md  context-docs-agent.md  docs-auditor-agent.md  testing-agent.md
docs/: CLAUDE_SNIPPET.md  README.md
docs/context/: API_REFERENCE.md  CHANGELOG.md  Context_Index_File.md  PRODUCTION_READY.md  Project_Authentication.md  Project_PDR.md  database_reference_guide.md
docs/prompts/: bugfix.md  create-testing-agent.md  debug.md  feature-lifecycle.md
note_organiser/: __init__.py  app.py  config.py  interfaces.py  models.py  pipeline.py  prompts.py
note_organiser/annotators/: __init__.py  claude.py  stub.py  venice.py
note_organiser/dedupers/: __init__.py  fuzzy.py
note_organiser/renderers/: __init__.py  karpathy_wiki.py
note_organiser/splitters/: __init__.py  markdown.py  paragraph.py  registry.py
note_organiser/stores/: __init__.py  jsonfile.py
notes/: phone_dump.txt  south_america.md  thoughts.md
